updated working directory.  leftover problem from folder renaming

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Collier/bin/Debug/net5.0/CollierService.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/MiningAutomater",
+            "cwd": "${workspaceFolder}/Collier",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
