Initial commit, all tests passing, end to end testing might need a few more runs

--- a/.gitignore
+++ b/.gitignore
@@ -445,3 +445,5 @@ $RECYCLE.BIN/
 ## Collier specific settings
 ##
 minersettings.private.json
+/CollierTests/dotCover.dcvr
+/CollierTests/dotCover.dcvr.settings
