--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -46,7 +46,8 @@
       "web": {
         "statusUrl": "http://localhost:4067/summary",
         "pauseUrl": "http://127.0.0.1:4067/control?pause=true:0",
-        "resumeUrl": "http://127.0.0.1:4067/control?pause=false:0"
+        "resumeUrl": "http://127.0.0.1:4067/control?pause=false:0",
+        "shutdownUrl" : "http://127.0.0.1:4067/control?command=shutdown"
       }
     }
   }
