switched to serilog for the logger

--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -1,9 +1,31 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "%AppData%\\Collier\\log\\service_log.txt",
+          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}",
+          "fileSizeLimitBytes": 10000000,
+          "rollOnFileSizeLimit": true,
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -47,7 +69,7 @@
         "statusUrl": "http://localhost:4067/summary",
         "pauseUrl": "http://127.0.0.1:4067/control?pause=true:0",
         "resumeUrl": "http://127.0.0.1:4067/control?pause=false:0",
-        "shutdownUrl" : "http://127.0.0.1:4067/control?command=shutdown"
+        "shutdownUrl": "http://127.0.0.1:4067/control?command=shutdown"
       }
     }
   }
