the gpu background service wasn't always excuting an action when receiving an event.  This also lead me to some problems where we need blocking during process spawning to ensure two processes do not spawn.

--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -13,8 +13,8 @@
       {
         "Name": "File",
         "Args": {
-          "path": "%AppData%\\Collier\\log\\service_log.txt",
-          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}",
+          "path": "%COLLIER_ROOT_DIRECTORY%\\log\\service_log.txt",
+          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}",
           "fileSizeLimitBytes": 10000000,
           "rollOnFileSizeLimit": true,
           "rollingInterval": "Day"
@@ -46,7 +46,7 @@
           ]
         }
       },
-      "pollingIntervalInSeconds": 60,
+      "pollingIntervalInSeconds": 30,
       "SmiCommandLocation": "C:\\Windows\\System32\\nvidia-smi.exe"
     },
     "userIdle": {
@@ -61,6 +61,8 @@
   },
   "miner": {
     "t-rex": {
+      "startupDelayInMs": 500,
+      "startupDelayAttempts": 5,
       "exeFileName": "t-rex.exe",
       "exeLocation": "C:\\Program Files (x86)\\Mining\\t-rex-0.19.11-win-cuda11.1",
       //an example exe arguments settings, which I store in minersettings.private.json and have a .gitignore on stop me from committing an address
