better logging configuration that puts things in debug that should be in debug, etc.  Standard log size is now 3MB a day.

--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -1,7 +1,15 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Debug",
+      "Override": {
+        "Collier.Monitoring.Gpu.GpuMonitorOutputParser_ProcessList": "Information",
+        "Collier.Mining.TrexWebClient": "Error",
+        "Collier.Mining.TrexMiner": "Information",
+        "Collier.Mining.MinerProcessFactory": "Information",
+        "Collier.Monitoring.Gpu": "Information",
+        "CollierService.Mining.DateStrippingTrexLogModifier": "Fatal"
+      }
     },
     "WriteTo": [
       {
