--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Error",
       "Override": {
         "Collier.Monitoring.Gpu.GpuMonitorOutputParser_ProcessList": "Information",
         "Collier.Mining.TrexWebClient": "Error",
