log observers implemented with broadcasting events, initial shell of some signalr stuff

--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -4,11 +4,10 @@
       "Default": "Error",
       "Override": {
         "Collier.Monitoring.Gpu.GpuMonitorOutputParser_ProcessList": "Information",
-        "Collier.Mining.TrexWebClient": "Error",
         "Collier.Mining.TrexMiner": "Information",
         "Collier.Mining.MinerProcessFactory": "Information",
         "Collier.Monitoring.Gpu": "Information",
-        "CollierService.Mining.DateStrippingTrexLogModifier": "Fatal"
+        "Collier.Mining.OutputParsing.InternalLoggingFrameworkObserver": "Error"
       }
     },
     "WriteTo": [
