--- a/Collier/CollierService.csproj
+++ b/Collier/CollierService.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<UserSecretsId>6ea81195-c3ca-48b8-966c-9d3e0f26c086</UserSecretsId>
+		<RootNamespace>Collier</RootNamespace>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,6 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MathNet.Numerics" Version="4.15.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
