corrected the serilog configuration.  we were still using both logging frameworks

--- a/Collier/CollierService.csproj
+++ b/Collier/CollierService.csproj
@@ -23,4 +23,10 @@
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
 		<PackageReference Include="System.Threading" Version="4.3.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
 </Project>
