--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -4,17 +4,20 @@
       "Default": "Error",
       "Override": {
         "Collier.Monitoring.Gpu.GpuMonitorOutputParser_ProcessList": "Information",
+        "Collier.Mining.IMiner": "Information",
         "Collier.Mining.TrexMiner": "Information",
         "Collier.Mining.MinerProcessFactory": "Information",
         "Collier.Monitoring.Gpu": "Information",
-        "Collier.Mining.OutputParsing.InternalLoggingFrameworkObserver": "Error"
+        "Collier.Mining.OutputParsing.InternalLoggingFrameworkObserver": "Error",
+        "System": "Information",
+        "Microsoft": "Information"
       }
     },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "===> {Timestamp:HH:mm:ss} [{Level}] ({SourceContext}) {Message}{NewLine}{Exception}"
         }
       },
       {
@@ -28,12 +31,6 @@
         }
       }
     ]
-  },
-  "Logging": {
-    "LogLevel": {
-      "System": "Information",
-      "Microsoft": "Information"
-    }
   },
   "AllowedHosts": "*",
   "Kestrel": {
