--- a/Collier/CollierService.csproj
+++ b/Collier/CollierService.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<UserSecretsId>6ea81195-c3ca-48b8-966c-9d3e0f26c086</UserSecretsId>
+		<RootNamespace>Collier</RootNamespace>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,11 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+		<PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Serilog" Version="2.10.0" />
@@ -27,6 +25,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="log\" />
+	  <Content Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 </Project>
