added support to ignore some sub paths for games that do not have high gpu load

--- a/Collier/appsettings.json
+++ b/Collier/appsettings.json
@@ -42,6 +42,9 @@
         "processListOutputParser": {
           "validGamePaths": [
             "C:\\Program Files (x86)\\Steam\\steamapps\\common"
+          ],
+          "ignoreGamePaths": [
+            "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Loop Hero"
           ]
         }
       },
