--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -11,9 +11,14 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.3",
+    "@types/react-native": "^0.63.52",
+    "@types/react-test-renderer": "^17.0.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-windows": "^0.64.0-0"
+    "react-native-windows": "^0.64.0-0",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
