--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -14,6 +14,7 @@
     "@microsoft/signalr": "^5.0.4",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.3",
+    "@types/react-color": "^3.0.4",
     "@types/react-native": "^0.63.52",
     "@types/react-test-renderer": "^17.0.1",
     "react": "17.0.1",
@@ -27,6 +28,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
