--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CollierUX",
+  "name": "collierux",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,35 +7,46 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "windows": "react-native run-windows"
   },
   "dependencies": {
     "@microsoft/signalr": "^5.0.4",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.3",
-    "@types/react-color": "^3.0.4",
-    "@types/react-native": "^0.63.52",
-    "@types/react-test-renderer": "^17.0.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-windows": "^0.64.0-0",
-    "typescript": "^4.2.3"
+    "react-native-windows": "^0.64.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/jest": "^26.0.20",
+    "@types/react-native": "^0.63.52",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "typescript": "^3.8.3",
+    "@types/react": "^17.0.3",
+    "@types/react-color": "^3.0.4",
+    "@types/react-native-vector-icons": "^6.4.6"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
