--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -16,10 +16,10 @@
     "react-color": "^2.19.3",
     "react-native": "0.64.0",
     "react-native-elements": "^3.3.2",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-windows": "^0.64.0-0",
-    "react-native-safe-area-context": "^3.2.0",
     "react-test-renderer": "17.0.1"
   },
   "devDependencies": {
@@ -39,7 +39,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-
+    "typescript": "^4.2.3"
   },
   "jest": {
     "preset": "react-native",
