--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -13,16 +13,21 @@
   "dependencies": {
     "@microsoft/signalr": "^5.0.4",
     "react": "17.0.1",
+    "react-color": "^2.19.3",
     "react-native": "0.64.0",
+    "react-native-elements": "^3.3.2",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-windows": "^0.64.0-0"
+    "react-native-windows": "^0.64.0-0",
+    "react-test-renderer": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
+    "@types/react-color": "^3.0.4",
     "@types/react-native": "^0.63.52",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
