--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -20,25 +20,27 @@
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-windows": "^0.64.0-0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.3",
     "@types/react-color": "^3.0.4",
     "@types/react-native": "^0.63.52",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.9",
+    "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3",
-    "@types/react": "^17.0.3",
-    "@types/react-color": "^3.0.4",
-    "@types/react-native-vector-icons": "^6.4.6"
+    "typescript": "^3.8.3"
   },
   "resolutions": {
     "@types/react": "^17"
