--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -20,11 +20,11 @@
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-windows": "^0.64.0-0",
-    "react-test-renderer": "17.0.1",
-    "styled-components": "^5.2.3"
+    "react-test-renderer": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
@@ -39,11 +39,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
-  },
-  "resolutions": {
-    "@types/react": "^17"
+    "typescript": "^4.2.3"
   },
   "jest": {
     "preset": "react-native",
