--- a/CollierUX/package.json
+++ b/CollierUX/package.json
@@ -20,7 +20,8 @@
     "react-native-signalr": "^1.0.6",
     "react-native-vector-icons": "^8.1.0",
     "react-native-windows": "^0.64.0-0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -35,6 +36,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.9",
     "@types/styled-components-react-native": "^5.1.1",
+    "@types/uuid": "^8.3.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
