--- a/CollierUX/windows/CollierUX/collierux.csproj
+++ b/CollierUX/windows/CollierUX/collierux.csproj
@@ -136,10 +136,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AppDataModule.cs" />
+    <Compile Include="NativeAppData.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NativeLogging.cs" />
+    <Compile Include="NativeRandom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutolinkedNativeModules.g.cs" />
     <Compile Include="ReactPackageProvider.cs" />
@@ -227,6 +229,12 @@
     </PackageReference>
     <PackageReference Include="Nito.AsyncEx.Context">
       <Version>5.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog">
+      <Version>2.10.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.File">
+      <Version>4.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '16.0' ">
